--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yadifa (2.2.2-1) unstable; urgency=medium
+
+  * New upstream version 2.2.2 (Closes: #828612)
+
+ -- Markus Schade <markus.schade@gmail.com>  Tue, 08 Nov 2016 12:21:48 +0100
+
 yadifa (2.2.1-1) unstable; urgency=low
 
   * New upstream version 2.2.1
