--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 yadifa (2.3.8-1) unstable; urgency=medium
 
   * New upstream version 2.3.8
-  * Update to compat/debhelper 10
+  * Update rules and compat to debhelper 10
   * Update standards version to 4.1.3
+  * Update to watch version 4
 
  -- Markus Schade <markus.schade@gmail.com>  Sat, 24 Feb 2018 18:19:01 +0100
 
