--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yadifa (2.3.8-2) unstable; urgency=medium
+
+  * Revert maintainer email as alioth is gone
+  * Update standards version to 4.1.4
+
+ -- Markus Schade <markus.schade@gmail.com>  Thu, 28 Jun 2018 09:12:19 +0200
+
 yadifa (2.3.8-1) unstable; urgency=medium
 
   * New upstream version 2.3.8
