--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yadifa (2.3.9-1) unstable; urgency=medium
+
+  * New upstream version 2.3.9
+  * Update standards version to 4.3.0
+
+ -- Markus Schade <markus.schade@gmail.com>  Sun, 24 Feb 2019 10:26:01 +0100
+
 yadifa (2.3.8-1) unstable; urgency=medium
 
   * New upstream version 2.3.8
